# nimbox

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  install.sh
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/app/: context.rs
src/commands/: add.rs  embed.rs  info.rs  list.rs  mod.rs  model.rs  provider.rs  remove.rs  start.rs  stop.rs  update.rs
src/key_manager/: manager.rs  state.rs
src/models/: chat.rs  config.rs  embedding.rs  mod.rs
src/providers/: ai_studio.rs  groq.rs  mod.rs  nim.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs
src/server/: anthropic.rs  gemini.rs  health.rs  mod.rs  openai.rs  routes.rs
src/services/: mod.rs  provider_executor.rs
src/storage/: file_store.rs  mod.rs  store.rs
test/: README.md  benchmark.py  ollama-smoke.sh
