[package]
name = "nimbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
dirs = "6.0.0"
eventsource-stream = "0.2.3"
futures = "0.3.32"
futures-core = "0.3.32"
futures-util = "0.3.32"
libc = "0.2.186"
once_cell = "1.21.4"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
